// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should apply custom class name 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Spinner
    className="Test__spinner"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "Test__spinner Spinner",
      "style": Object {
        "borderBottomWidth": "2px",
        "borderLeftColor": "#ffffff",
        "borderLeftWidth": "2px",
        "borderRightWidth": "2px",
        "borderTopWidth": "2px",
        "height": "16px",
        "width": "16px",
      },
    },
    "ref": null,
    "rendered": null,
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "Test__spinner Spinner",
        "style": Object {
          "borderBottomWidth": "2px",
          "borderLeftColor": "#ffffff",
          "borderLeftWidth": "2px",
          "borderRightWidth": "2px",
          "borderTopWidth": "2px",
          "height": "16px",
          "width": "16px",
        },
      },
      "ref": null,
      "rendered": null,
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Spinner should shallow render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Spinner />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "Spinner",
      "style": Object {
        "borderBottomWidth": "2px",
        "borderLeftColor": "#ffffff",
        "borderLeftWidth": "2px",
        "borderRightWidth": "2px",
        "borderTopWidth": "2px",
        "height": "16px",
        "width": "16px",
      },
    },
    "ref": null,
    "rendered": null,
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "Spinner",
        "style": Object {
          "borderBottomWidth": "2px",
          "borderLeftColor": "#ffffff",
          "borderLeftWidth": "2px",
          "borderRightWidth": "2px",
          "borderTopWidth": "2px",
          "height": "16px",
          "width": "16px",
        },
      },
      "ref": null,
      "rendered": null,
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
